Fixing footer appearing behind schedule

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -39,6 +39,7 @@ body > .container {
   width: 100%;
   height: 40px;
   line-height: 40px; /* Vertically center the text there */
+  z-index: 2;
 }
 /**
  * Utilities
